# Data_Science_Harness

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-observar-recordar/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-observar-recordar/checklists/: requirements.md
specs/001-observar-recordar/contracts/: cli.md  memory-schemas.md  tools.md
src/ds_harness/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_setup.py
src/ds_harness/agent_loop/: __init__.py  client.py  loop.py  system_prompt.py
src/ds_harness/git_log/: __init__.py  history.py
src/ds_harness/hooks/: __init__.py  pre_tool_use.py
src/ds_harness/lineage/: __init__.py  infer.py
src/ds_harness/memory/: __init__.py  models.py  store.py  terminal.py  views.py
src/ds_harness/scanner/: __init__.py  common.py  sources.py  structure.py
src/ds_harness/scanner/extractors/: __init__.py  notebook.py  python_ast.py  sql.py
src/ds_harness/tools/: __init__.py  annotate.py  confirm_lineage.py  define_column.py  query_memory.py  registry.py  wiring.py
tests/fixtures/: sample_destructive_tool.py
tests/fixtures/sample_no_git/: analysis.py
