[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-harness"
version = "0.1.0"
description = "Memoria persistente, trazable y consultable para proyectos de ciencia de datos (Fase 1: Observar y Recordar)."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.3.0",
    "pathspec>=0.12",
    "sqlglot>=23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ds_harness = "ds_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
